# Darknet-CamerasControler

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  SETUP_DARKNET.md  diagnose.sh  fix_darknet.sh  install.sh  package-lock.json  package.json  requirements.txt  start.sh  test_server.sh
.claude/: settings.local.json
.claude/agents/: project-organizer.md  senior-architect-dev.md  ux-ui-designer.md
config/: cameras_config.json  detection_config.json  models_config.json
darknet/: CM_version.cmake  CMakeCache.txt  VERSION
darknet-custom/: README.md  install.sh
darknet-custom/examples/: simple_stream_progressive.cpp  web_stream_mjpeg
darknet/cfg/: coco.data  yolov4-tiny.cfg
darknet/src-examples/: CMakeLists.txt  camera_config.h  simple_stream.cpp
docs/: API_EXAMPLES.md  INDEX.md  README.en.md  README.md  VERSION_MANAGEMENT.md  postman_collection.json
docs/licenses/: NOTICE
docs/setup/: DEPENDENCIES.md  SETUP_DARKNET.md
logs/: camera_1_config.json  camera_1_settings.json  camera_2_settings.json  camera_3_config.json  camera_3_settings.json  camera_5_settings.json
scripts/: .yolo_config  README.md  start.sh  stop.sh  yolo_manager.sh
src/frontend/: panel.html  stream_viewer.html
src/server/: api_server.js
